created navigation bar

--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
 
 <head lang="en">
-
     <meta charset="utf-8">
     <title>Landing-page</title>
-
+    <link rel="stylesheet" href="style.css">
 </head>
-
-<body></body>
+<body>
+    <nav class="header">
+        <div class="logo">
+            Header Logo
+        </div>
+        <ul class="header-link-list">
+            <li><a href="#">Header link one</a></li>
+            <li><a href="#">Header link two</a></li>
+            <li><a href="#">Header link three</a></li>
+        </ul>
+    </nav>
+</body>
 
 </html>
