Created the hero-container

--- a/index.html
+++ b/index.html
@@ -6,17 +6,30 @@
     <title>Landing-page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <nav class="header">
-        <div class="logo">
-            Header Logo
+    <div class="head-container">
+        <nav class="header">
+            <div class="logo">
+                Header Logo
+            </div>
+            <ul class="header-link-list">
+                <li><a href="#">Header link one</a></li>
+                <li><a href="#">Header link two</a></li>
+                <li><a href="#">Header link three</a></li>
+            </ul>
+        </nav>
+        <div class="hero-container">
+            <div class="hero-content">
+                <div class="title">This website is awesome</div>
+                <div class="below-title"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p></div>
+                <button class="title-button">Sign up</button>
+            </div>
+            <div class="hero-image">
+              <p>This is a placeholder for an image</p> 
+            </div>
         </div>
-        <ul class="header-link-list">
-            <li><a href="#">Header link one</a></li>
-            <li><a href="#">Header link two</a></li>
-            <li><a href="#">Header link three</a></li>
-        </ul>
-    </nav>
+    </div>
 </body>
 
 </html>
