--- a/index.html
+++ b/index.html
@@ -30,6 +30,40 @@
             </div>
         </div>
     </div>
+    <div class="mid-container">
+        <div class="top">
+            <div class="title">Some random information.</div>
+            <div class="grid-container">
+                <div class="grid">
+                    <div class="illustration">
+                        <p></p>
+                    </div>
+                    <p>this some subtext under an illustration or image</p>
+                </div>
+                <div class="grid">
+                    <div class="illustration"><p></p></div>
+                    <p>this some subtext under an illustration or image</p>
+                </div>
+                <div class="grid">
+                    <div class="illustration"><p></p></div>
+                    <p>this some subtext under an illustration or image</p>
+                </div>
+                <div class="grid">
+                    <div class="illustration"><p></p></div>
+                    <p>this some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+        <div class="middle">
+
+        </div>
+        <div class="bottom">
+
+        </div>
+    </div>
+    <div class="footer">
+
+    </div>
 </body>
 
 </html>
