--- a/index.html
+++ b/index.html
@@ -55,10 +55,17 @@
             </div>
         </div>
         <div class="middle">
-
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+            <p class="sign">-Thor, God of Thunder</p>
         </div>
         <div class="bottom">
-
+            <div class="box">
+                <div class="information">
+                    <p class="heading">Call to action! It's time!</p>
+                    <p class="content">Sign up for our product by clicking that button right over there</p>
+                </div>
+                <div class="button"><button>Sign up</button></div>
+            </div>
         </div>
     </div>
     <div class="footer">
